--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,8 @@ pipenv==2022.7.4; python_version >= '3.7'
 
 platformdirs==2.5.2; python_version >= '3.7'
 
+psycopg2==2.9.3
+
 sentry-sdk==1.8.0
 
 setuptools==63.2.0; python_version >= '3.7'
