--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ sqlparse==0.4.2; python_version >= '3.5'
 
 typing-extensions==4.3.0; python_version >= '3.7'
 
-tzdata==2022.1; sys_platform == 'win32'
+tzdata==2022.1
 
 urllib3==1.26.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
 
