--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ backports.zoneinfo==0.2.1; python_version < '3.9'
 boto3==1.24.36
 botocore==1.27.36; python_version >= '3.7'
 certifi==2022.6.15; python_version >= '3.6'
+charset-normalizer==2.1.0; python_version >= '3.6'
 distlib==0.3.5
 django-appconf==1.0.5; python_version >= '3.6'
 django-countries==7.3.2
@@ -18,6 +19,7 @@ django-staticfiles==1.2.1
 django-storages==1.12.3
 django==4.0.6
 filelock==3.7.1; python_version >= '3.7'
+idna==3.3; python_version >= '3.5'
 jmespath==1.0.1; python_version >= '3.7'
 pbr==5.9.0; python_version >= '2.6'
 pillow==9.2.0
@@ -27,6 +29,7 @@ pipenv==2022.7.4; python_version >= '3.7'
 platformdirs==2.5.2; python_version >= '3.7'
 psycopg2==2.9.3
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+requests==2.28.1
 s3transfer==0.6.0; python_version >= '3.7'
 sentry-sdk==1.8.0
 setuptools==63.2.0; python_version >= '3.7'
